@@ -6,6 +6,7 @@ OpenLDAP 2.4.24 Engineering
 	Fixed libldap dnssrv port format specifier (ITS#6644)
 	Fixed libldap GnuTLS hang on socket close (ITS#6673)
 	Fixed libldap sasl partial write handling (ITS#6639)
+	Fixed libldap referral chasing (ITS#6602)
 	Fixed libldap url parsing with NULL host (ITS#6653)
 	Fixed liblutil getpass prompts (ITS#6702)
 	Fixed ldapsearch segfault with deref (ITS#6638)
